fix: remove light/dark mode css variables, only light mode

--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -48,7 +48,7 @@
 
   .card__tag {
     padding: 10px 12px;
-    color: var(--text-dark);
+    color: var(--color-black);
     text-box: trim-both cap alphabetic;
     font-weight: bold;
     font-size: 16px;
@@ -67,7 +67,7 @@
   }
 
   .card__title h2 {
-    color: var(--text-dark);
+    color: var(--color-black);
     font-size: var(--font-size-4);
     font-weight: bold;
 
